criamos a seção de planos

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,7 @@
 @use 'hero';
 @use 'variaveis';
+@use 'shows';
+@use 'plans';
 
 @font-face {
     font-family: Avenir;
@@ -17,20 +19,20 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Avenir, sans-serif;
 }
 
 body {
     background-color: variaveis.$corDeFundo;
-    font-family: Avenir, sans-serif;
 }
 
-@mixin text($fontSize: 11px){
+@mixin text($fontSize: 16px){
     font-size: $fontSize;
     line-height: $fontSize + 10px;
     color: variaveis.$corTextoPrincipal;
 }
 
-@mixin title($fontSize: 28px){
+@mixin title($fontSize: 40px){
     @include text($fontSize);
     color: variaveis.$corTextoSecundario;
 }
@@ -44,11 +46,11 @@ body {
 }
 
 .text--small {
-    @include text(10px);
+    @include text(12px);
 }
 
 .link-text {
-    @include text(13px);
+    @include text(18px);
     color: variaveis.$corTextoSecundario;
     text-decoration: underline;
 }
@@ -62,5 +64,19 @@ body {
 }
 
 .title--small {
-    @include title(20px);
+    @include title(28px);
+}
+
+.button {
+    display: block;
+    width: 100%;
+    height: 60px;
+    font-size: 18px;
+    color: variaveis.$corTextoSecundario;
+    background-color: #6421ff;
+    text-transform: uppercase;
+    border-radius: 4px;
+    margin-top: 2vw;
+    margin-bottom: 8px;
+    border: none;
 }
