--- a/src/styles/_variaveis.scss
+++ b/src/styles/_variaveis.scss
@@ -1,3 +1,6 @@
 $corDeFundo: #040714;
 $corTextoPrincipal: silver;
 $corTextoSecundario: #f9f9f9;
+$corDefundoBotaoPrimario: #6421ff;
+$corDeFundobotaoSecundario: #0063e5;
+$corDeFundoBotaoDark: #000;
